<resources>
    <string name="app_name">GhostLeg</string>
    <string name="label_game_title">사타리 타기</string>
    <string name="label_button_start">시작하기</string>
    <string name="label_button_reset">초기화</string>
    <string name="label_button_setting">설정</string>
    <string name="label_question_mark">\?</string>
    <string name="label_button_plus">Plus</string>
    <string name="label_button_minus">MINUS</string>
    <string name="label_button_close">닫기</string>
    <string name="label_button_save">저장</string>
    <string name="label_setting">설정</string>
    <string name="label_game_playing_message">현재 게임 진행 중 입니다.</string>
    <string name="label_player_count_limit_message">플레이어 수는 최대 2 ~ 10명으로 설정할 수 있습니다.</string>
</resources>